--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest  --passWithNoTests",
+    "start": "webpack-dev-server --open",
+    "test": "jest  --passWithNoTests --no-cache --run-in-band",
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage"
@@ -20,11 +21,13 @@
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "clean-webpack-plugin": "^4.0.0",
     "eslint": "^8.16.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^4.1.3",
     "husky": "^8.0.1",
